# eq-rts-map

./: .gitignore  Earthquake Map.tsx  electron-builder.yml  index.html  next.config.ts  package.json
.erb/configs/: webpack.config.base.cjs  webpack.config.main.dev.cjs  webpack.config.main.prod.cjs
.github/workflows/: ci.yml  release.yml
electron/: main.js  main.ts  preload.js  preload.ts
public/locales/en-US/: translation.json
public/locales/ja-JP/: translation.json
public/locales/zh-Hant/: translation.json
resources/icons/: app.icns
scripts/: afterPack.js
src/: i18n.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: layout.tsx  page.tsx
src/app/analyze/: page.tsx
src/app/home/: page.tsx
src/components/: AlertManager.tsx  ChartSection.tsx  LanguageSwitcher.tsx  MapSection.tsx  StatsDisplay.tsx  ThemeToggle.tsx  footer.tsx
src/contexts/: RTSContext.tsx
src/hooks/: useCountAnimation.ts  useElectronUpdater.ts
src/lib/: fileTypeUtils.ts  rts.ts  statsStorage.ts  websocket.ts
src/types/: electron.d.ts
