[package]
name = "eq-rts-map"
version = "0.1.0"
description = "儲存空間視覺化分析工具"
authors = ["whes1015"]
edition = "2021"
license = "AGPL-3.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
sysinfo = "0.36.1"
lazy_static = "1.5"
rayon = "1.10"
filesize = "0.2"
tauri-plugin-autostart = "2.5.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-opener = "2"
